--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -106,4 +106,4 @@
 %---------------------------------------------------
 
 %cleverref
-\usepackage[noabbrev,capitalize]{cleveref}
+\usepackage[capitalize]{cleveref}
