--- a/bibliography.bib
+++ b/bibliography.bib
@@ -209,6 +209,24 @@
       SLACcitation   = "%%CITATION = INSPIRE-944101;%%"
 }
 
+%jeff thesis
+@phdthesis{Gustafson:2016dh,
+      author         = "Gustafson, Jeffrey",
+      title          = "{A Search for Baryon Number Violation by Two Units at the Superk-Kamiokande Detector}",
+      school         = "Boston U.",
+      year           = "2016",
+      url            = "http://www-sk.icrr.u-tokyo.ac.jp/sk/_pdf/articles/2016/Jeffrey_Gustafson_final_dissertation_v2.pdf"
+}
+
+%euan thesis
+@phdthesis{Richardson:2015kd,
+      author         = "Richardson, Euan",
+      title          = "{Studies of the Energy, Azimuthal, and Time Spectra of the Atmospheric Neutrino Flux at Super-Kamiokande}",
+      school         = "Tokyo U.",
+      year           = "2015",
+      url            = "http://www-sk.icrr.u-tokyo.ac.jp/sk/_pdf/articles/EuanRichard_PhDThesis.pdf"
+}
+
 %pmt improvements sk
 @article{Suzuki:1992as,
       author         = "Suzuki, A. and Mori, M. and Kaneyuki, K. and Tanimori, T.
