beginning PC reduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -219,8 +219,8 @@
 }
 
 %euan thesis
-@phdthesis{Richardson:2015kd,
-      author         = "Richardson, Euan",
+@phdthesis{Richard:2015kd,
+      author         = "Richard, Euan",
       title          = "{Studies of the Energy, Azimuthal, and Time Spectra of the Atmospheric Neutrino Flux at Super-Kamiokande}",
       school         = "Tokyo U.",
       year           = "2015",
@@ -629,8 +629,16 @@ month = nov
       SLACcitation   = "%%CITATION = ARXIV:1008.1783;%%"
 }
 
-
-
+%Fanny thesis
+@phdthesis{Dufour:2009ljt,
+      author         = "Dufour, Fanny",
+      title          = "{Precise Study of the Atmospheric Neutrino Oscillation
+                        Pattern Using Super-Kamiokande I and II}",
+      school         = "Brussels U.",
+      year           = "2009",
+      url            = "http://www-sk.icrr.u-tokyo.ac.jp/sk/pub/index.html#dthesis",
+      SLACcitation   = "%%CITATION = INSPIRE-1215976;%%"
+}
 
 
 
