--- a/data_processing/FC.tex
+++ b/data_processing/FC.tex
@@ -74,7 +74,7 @@ where $N$ is the number of patches, $Q_i$ is the summed charge (in pe) in the $i
 \begin{figure}
 \centering
 \includegraphics[width=0.5 \textwidth,keepaspectratio=true]{figures/Flasher_cut.png}
-\caption{Likelihood variable used for flasher cut in FC5 \cite{Richardson:2015kd}.}
+\caption{Likelihood variable used for flasher cut in FC5 \cite{Richard:2015kd}.}
 \label{fig:flasher_cut}
 \end{figure}
 \subsection{FC5}
@@ -119,4 +119,4 @@ The events passing FC5 still contain some background, mostly in the form of low 
 \item The reconstructed visible energy must be larger than 30 MeV
 \item The maximum number of hits in an OD cluster must be less than 16 (less than 10 for SK-II)
 \end{itemize}
-After these cuts, about 8 events per day remain, which agrees well with MC expectation.  This final analysis sample if called "Fully-Contained Fiducial Volume" (FCFV), and it is estimated that the efficiency of the FCFV selection for selecting neutrino events in the FV which do not penetrate the OD is about 98\%.  The fraction of FCFV events which are background is estimated to be around 0.3\%-0.4\% in SK II-III, and 0.02\% is SK-IV \cite{Richardson:2015kd}.
+After these cuts, about 8 events per day remain, which agrees well with MC expectation.  This final analysis sample if called "Fully-Contained Fiducial Volume" (FCFV), and it is estimated that the efficiency of the FCFV selection for selecting neutrino events in the FV which do not penetrate the OD is about 98\%.  The fraction of FCFV events which are background is estimated to be around 0.3\%-0.4\% in SK II-III, and 0.02\% is SK-IV \cite{Richard:2015kd}.
