--- a/data_processing/PC.tex
+++ b/data_processing/PC.tex
@@ -1,1 +1,2 @@
 \section{Partially Contained Reduction}
+The partially contained reduction searches for muons that originated in the ID but were able to penetrate into the OD.  Similarly to the FC reduction, this is done in a sequence of five steps, labeled PC1-PC5.  The PC reduction selects about two events every three days from the $10^6$ events recorded by SK.  Between SK-II and SK-III, the top, bottom, and barrel of the OD were optically separated from one another.  This segmentation allowed for a more efficient PC selection from SK-III onward.  I will describe here the PC selection in SK-III and SK-IV, description of the selection for early periods can be in \cite{Dufour:2009ljt}. 
